[package]
name = "totp-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
gio = "0.19.2"
hmac = "0.12.1"
libc = "0.2.153"
libsecret = { version = "0.5.0", features = ["v0_19"] }
sha1 = "0.10.6"
url = "2.5.0"
